--- a/VRChat/80/1184480.html
+++ b/VRChat/80/1184480.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cPruULo0DhWdJDX7UYMC3zfLwtjcrT5ua/YgZwMXZHA="></script>
+    "+s2qcFYZAzL/ZLcl0YDUyzrLtzHdmlPwXXMEs56f1yw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「くるりちゃん」ぬいぐるみ","description":"この3DモデルはVRchat向けに作りました\nこのモデル、およびキャラクターを使用する際は以下の内容を守ってください\n\n●これらを人の迷惑となる行為に使用しない\n\n●これらの制作者を偽らない\n\n●これらを商用利用しない\n\n●これらを用いた二次創作物を無断で頒布（※1）しない\n\n●このデータを無断で再配布しない\n\n〇マナーを守り楽しく使用しましょう\n\n（※1）ここでは同人即売会等で金銭のやり取りをする場合をさします\n\nまたこのデータを使用したことで不測の事態が起きた場合の責任は負いかねます。\n\n\n【スペック】\nポリゴン数：△4290\nマテリアル数：2\nメッシュ数：1\n\nワールド設置に便利なprefab付きです。pickup、objectsyncが設定済みなので初心者でも簡単に自分のお部屋に飾れます。\ndynamic boneをインポートして専用のprefabを読み込むと頭が傾くギミックも\nシェーダーはsynqarkさんのarktoon shaderを同梱させていただいておりますので個別のインポートは必要ありません。\n","url":"https://booth.pm/ja/items/1184480","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e1de58a1-2cce-44e8-acd7-784faaded619/i/1184480/fbca1246-32a2-4fa2-9a39-81c54716985b_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cPruULo0DhWdJDX7UYMC3zfLwtjcrT5ua/YgZwMXZHA="></script>
+    nonce="+s2qcFYZAzL/ZLcl0YDUyzrLtzHdmlPwXXMEs56f1yw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1184480/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1184480/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
