--- a/VRChat/25/1179925.html
+++ b/VRChat/25/1179925.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "baMvLCPC58TWprKjVYWpghStTrsCIVT57avwJ3MSNS8="></script>
+    "vgaAEyZ53A40fHMGZWjhFnkuwbN9H0aeqlCpvcyEY20="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRアバター『ニーツ/VT-212_量産型』","description":"【注意】\n本データはmetasequoa上で制作されたものです。\nBlender等別のソフトウェアで読み込み時に不具合が生じる可能性がありますのでご了承ください。\n\n\n\nVRC向けのオリジナルアバターです。\nDynamicBoneとユニティちゃんトゥーンシェーダー2.0に対応しています。\n\n※予めUnityプロジェクトにVRCSDK、及びDynamicBone(任意)をインポートした状態でunitypackageをインポートしてください。\n\nポリゴン数(三角面)：60502\nマテリアル数：5\nパフォーマンス：poor(DynamicBoneを除いた場合はgood)\n\n\n本データはVRCでの利用を想定しております。VRC以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n◆禁止事項\n・本データの再配布は禁止です。\n・自作発言等、作者を偽る発言はおやめください。\n・ニーツ/VT-212というモデル/名称を使いを架空のキャラクターとして公の場で活動させる行為(バーチャルYouTuber活動)は禁止です。ただし、十分独自性があると認められるほど改変したモデルはその限りではありません。\n・本データ内のテクスチャからロゴのみを抜き出して別途利用するのはおやめください。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n\n◆補足\nTexture_Omakeファイル内には”ロゴのないテクスチャ”、”陰の焼きこみがないテクスチャ”、”ロゴと陰の焼きこみがないテクスチャ”の3種類が入っています。\n本データにはユニティちゃんトゥーンシェーダーが含まれております。\n© Unity Technologies Japan/UCL\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用・アバターのpublic化は禁止します。\n\n◆ロゴ提供クレジット(敬称略)\nRocket-Lapin(https://twitter.com/rocketlapin)\nゆーふぉ(https://twitter.com/euphoria_VR)\n穣津ペグ(https://twitter.com/JO2PEG)\n超蔟(https://twitter.com/999tyousoku)\nぜろりん(https://twitter.com/sissyo40)\n零式77型(https://twitter.com/reisiki77)\n電脳町内会長『冬野　快』(https://twitter.com/Winter_Xth)\nプレイボーン(https://twitter.com/VPlaybone)\nクリーヴァ(https://twitter.com/kleava)\nKarasuma-Kuro(https://twitter.com/Karasu_ma_Kuro)\n黒金ニエロ(https://twitter.com/Niello_virtual)\nRyGrK(https://twitter.com/RyGrK888)\nクルトラン(https://twitter.com/cooltoran)\n七草次郎(https://twitter.com/Nanairokusa)\nつよつよのつや(https://twitter.com/tuyotuya817)\nシンザ(https://twitter.com/cinza_sane)\nエーテルイカ(https://twitter.com/382KEN)\nアカメ(https://twitter.com/vr_akame)\nさけＰ(https://twitter.com/SAKENOOB)\nリョーサン(https://twitter.com/ryosanbot)\nぬこみや(https://twitter.com/nukomiya09)","url":"https://booth.pm/ja/items/1179925","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/22623f29-cbf4-42f5-96e7-40d523e8e6fe/i/1179925/c2813b99-bbf2-4031-9ece-780b2fe08ad0_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="baMvLCPC58TWprKjVYWpghStTrsCIVT57avwJ3MSNS8="></script>
+    nonce="vgaAEyZ53A40fHMGZWjhFnkuwbN9H0aeqlCpvcyEY20="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1179925/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               347
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1179925/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               347
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
