--- a/VRChat/16/1182016.html
+++ b/VRChat/16/1182016.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SRpLG369ZAzPQF4J4e0uSM8u1+5+0rTtj+RCDEA/2+k="></script>
+    "hxOX7eDmNwki+u/V5FLnii6qNxjxE6/QS4NPJgPc9Q8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"四季の狐面セット","description":"四季の狐面セット\n\n※本セットはUnity packageデータの販売になっております\n\n内容物\nUnity package\nreadme\n\n◆利用規約\n〇本データの著作権は「狐のお面屋さん」の狐にあります。\n〇当モデルの改変は可能です。テクスチャ等も自分で作成したものを仕様して頂いてかまいません。\n（その場合のテクスチャの著作権はその作成者にあるものとなります。）\n〇商用利用、再配布や販売を禁止します。（改変後も同様とします）\n\n\n■ 免責事項\nいかなる場合においても、\nこのモデルの使用によって生じた問題に対して責任を負いかねます。\nご使用の際は自己責任でお願いします。\n\n\n連絡先\nTwitter　@foxface_vr\nメール　foxface_vr@yahoo.co.jp","url":"https://booth.pm/ja/items/1182016","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/50dd0ee9-b096-417f-bb42-d66b91a07be1/i/1182016/3c75f6bc-d16c-4aa3-9db6-d2b04c3fdb0c_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SRpLG369ZAzPQF4J4e0uSM8u1+5+0rTtj+RCDEA/2+k="></script>
+    nonce="hxOX7eDmNwki+u/V5FLnii6qNxjxE6/QS4NPJgPc9Q8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1182016/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1182016/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
