--- a/VRChat/15/1181915.html
+++ b/VRChat/15/1181915.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hfkUG63zUdEN/ZCTaSoY7RRDnqKvDHFNrfKtoG2DZBc="></script>
+    "/bFYFlF4pOfOQevjlXauFTtpESc4qsQRJ5QJ2naGrWA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【銘菓】ひにょうまんじゅう","description":"ひにょうさんをイメージしたおまんじゅうです。\nお土産や非常食にいかがですか？\n\n※ひにょうさんに風評被害が及ばない範囲で遊んでね","url":"https://booth.pm/ja/items/1181915","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/867d2324-2658-4bb8-b5cd-6d3213e2ff63/i/1181915/c7c4f68b-c938-4f08-a371-45628b1cbfbd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hfkUG63zUdEN/ZCTaSoY7RRDnqKvDHFNrfKtoG2DZBc="></script>
+    nonce="/bFYFlF4pOfOQevjlXauFTtpESc4qsQRJ5QJ2naGrWA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1181915/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               250
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1181915/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               250
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
