--- a/VRChat/03/1179203.html
+++ b/VRChat/03/1179203.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Avj1uZJ41ULDvJi+RLuAdeGDxY/+Z2y8Vbhq7A4XA2k="></script>
+    "4v4v48nUmEYK/poxaE89cruuToDT8AjJ+inxswB9Ndg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"甲冑兵","description":"ポリゴン数：11224\nテクスチャ：1024×1024 2枚\nボーン構造はHumanoidベースです。\n高さは1.5mほど。\n\n【利用規約】\n　本モデルを購入した時点で本利用規約に同意したものとします。\n　利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n○禁止行為\n　以下のような使用を禁止致します。\n　×公序良俗に反する利用\n　×政治的・宗教的主張に関する利用\n　×製品の再配布・再販売\n　×自作発言等\n\n・ゲームに組み込む・VRChatでのペデスタル、ワールドへの使用等は再配布とせず、許可致します。\n\n○テクスチャ改変、モデル改変および商業への使用は、禁止行為に抵触しない限り制限致しません。\n\n○本モデルを使用した動画・静止画の制作・公開可\n\n\n○免責事項\n\n　本モデルを使用していかなる損害が発生したとしても、制作者は責任を負いません。\n　使用は自己責任でお願いします。\n","url":"https://booth.pm/ja/items/1179203","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7dbb3b76-f890-4575-ae61-147a2b96570f/i/1179203/8102708a-53e2-44d7-bc45-473b31653ccc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Avj1uZJ41ULDvJi+RLuAdeGDxY/+Z2y8Vbhq7A4XA2k="></script>
+    nonce="4v4v48nUmEYK/poxaE89cruuToDT8AjJ+inxswB9Ndg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1179203/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1179203/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
