--- a/VRChat/20/1178420.html
+++ b/VRChat/20/1178420.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BFzS6UEc+3MeYi+QVon6zquzh8MGUHCQIan3aTlXfY4="></script>
+    "bhpsRLPyFofJZxgGLR23LXtdnu+ziiIhDYFdY/U7iZc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ボクセルモデル】悪のロボットワルワルカニカニロボV3","description":"最終更新日2019/01/14\n\n\n[性能]～ほどほど～\n[特徴]～水陸両用～\n[製作者]https://www.youtube.com/channel/UCw8V1-vKkEWPzMaIJgMICpw\n\n・概要・\n「悪のロボット　カニカニワルワルロボV3」はこの私クロエのオリジナルボクセルモデルです。\n本モデルの著作権はこの私クロエに帰属するものとします。\n","url":"https://booth.pm/ja/items/1178420","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a2a92648-5828-4c7e-841d-4ba2cd74af64/i/1178420/2b4ec96e-7b22-4ab2-9df4-a6316baaeec8_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BFzS6UEc+3MeYi+QVon6zquzh8MGUHCQIan3aTlXfY4="></script>
+    nonce="bhpsRLPyFofJZxgGLR23LXtdnu+ziiIhDYFdY/U7iZc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1178420/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1178420/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
