--- a/VRChat/01/1178601.html
+++ b/VRChat/01/1178601.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sAFoDCocaLJr7zcMjb8LfWvryDov24Fbr1PKc8DJPwQ="></script>
+    "Q26vswJknIP8Ow7kHowZBMvFjq/CY3OlhtDoahuvB1Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"セーラーワンピース【VRoid用テクスチャ】","description":"■商品説明\n・pixiv社提供の3Dモデリングソフト「VRoid Studio」で使用するテクスチャ素材です。\n・衣装：ワンピースのテクスチャとして利用ください。\n・商品画像にあるモデルデータは含まれません。\n\n■内容物\n・セーラーワンピース\n　・dress_sailor_blue.png\n　・dress_sailor_brown.png\n　・dress_sailor_green.png\n　・dress_sailor_pink.png\n　・dress_sailor_purple.png\n　・readme.txt\n\n■利用規約\n↓こちらを参照してください。\nhttps://www.pixiv.net/member.php?id=1512738\n","url":"https://booth.pm/ja/items/1178601","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4644c3b8-7323-49ec-884d-8226954b89c6/i/1178601/6deeb232-3561-42fc-b617-5e754fc9fa6b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sAFoDCocaLJr7zcMjb8LfWvryDov24Fbr1PKc8DJPwQ="></script>
+    nonce="Q26vswJknIP8Ow7kHowZBMvFjq/CY3OlhtDoahuvB1Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1178601/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1178601/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
